--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
+    "@sanity/client": "^6.28.3",
     "next": "15.2.1",
+    "next-sanity": "^9.9.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
