general updates, introduced contact form using resend

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next-sanity": "^9.9.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "resend": "^4.1.2",
     "sanity": "^3.78.1"
   },
   "devDependencies": {
