--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   "dependencies": {
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
+    "@next/third-parties": "^15.5.3",
     "@react-pdf/renderer": "^4.3.0",
     "@sanity/vision": "^3.78.1",
-    "next": "^15.3.4",
+    "next": "^15.5.3",
     "next-sanity": "^9.9.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
