--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@next/third-parties": "^15.5.3",
     "@react-pdf/renderer": "^4.3.0",
     "@sanity/vision": "^3.78.1",
+    "@supabase/ssr": "^0.7.0",
+    "@supabase/supabase-js": "^2.75.0",
     "next": "^15.5.3",
     "next-sanity": "^9.9.0",
     "react": "^19.0.0",
