--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@sanity/vision": "^3.78.1",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.75.0",
-    "next": "^15.5.3",
+    "next": "15.5.7",
     "next-sanity": "^9.9.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
